# typed_curry

./: gen.py  pyproject.toml  ref.py
test/: test_curry.py
typed_curry/: __init__.py
