[tool.poetry]
name = "typed_curry"
version = "0.1.0"
description = ""
authors = ["Yohei Tamura <tamuhey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.7.0"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
